Sugati/src/objects/Supplier_Payment_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>SPT_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPT_Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SPT_Our_Ref__c</fullName>
        <inlineHelpText>Cheque Number of Payment Reference</inlineHelpText>
        <label>Our Ref</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPT_Remittance_Date__c</fullName>
        <inlineHelpText>Payment Date</inlineHelpText>
        <label>Remittance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SPT_Supplier_Payment__c</fullName>
        <label>Supplier Payment</label>
        <referenceTo>Supplier_Payment__c</referenceTo>
        <relationshipLabel>Supplier Payment Transactions</relationshipLabel>
        <relationshipName>Supplier_Payment_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SPT_Write_Off_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Write Off Balance</label>
        <type>Checkbox</type>
    </fields>
    <label>Supplier Payment Transaction</label>
    <nameField>
        <displayFormat>SPT-{0000000000}</displayFormat>
        <label>Supplier Payment Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>